Now requires SASS for cleaner code.

--- a/src/start.html
+++ b/src/start.html
@@ -44,7 +44,7 @@
 
     <!-- app -->
     <script type="text/javascript" src="main.js"></script>
-    <script type="text/javascript" src="css/mdb.min.js"></script>
-
+	<script src="vendors/cryptoJS/mdb.min.js"></script>
+	
   </body>
 </html>
