--- a/tests/start.html
+++ b/tests/start.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Nano Wallet Tests</title>
+    <title>NEM Wallet Tests</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.4.1/jasmine.min.css">
   </head>
   <body>
